# ros_robot2

./: package.xml
config/: config.yaml
include/my_project/core/: Environment.hpp  Waste.hpp  WasteGenerator.hpp
my_project/: CMakeLists.txt  package.xml  prog
my_project/config/: config.yaml
my_project/include/canvas/: Canvas.h
my_project/include/my_project/core/: Environment.hpp  Lidar.hpp  Obstacle.hpp  Robot.h  Robot.hpp  Waste.hpp  WasteFactory.hpp
my_project/resources/: opk-map.yaml
my_project/src/core/: Environment.cpp  Lidar.cpp  Robot.cpp  Waste.cpp
my_project/src/core/canvas/: Canvas.cpp
my_project/src/wrappers/: environment_node.cpp  game_node.cpp  interactive_teleop_node.cpp  lidar_node.cpp  monitor_node.cpp  robot_node.cpp  teleop_node.cpp  test_cmd_publisher.cpp  visualization_node.cpp
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: GameState.msg  RobotStatus.msg  TrashItem.msg
src/core/: Robot.cpp  prog  test.cpp
